--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.otl.gps.navigation.map.route">
 
     <application
+        android:name="application.RawGpsApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RawGPS"
         tools:targetApi="31">
-
+        <!-- Admob Meta tags -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/gps_app_id" />
         <activity
             android:name=".view.activity.main.MainController"
             android:exported="false"
