--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 21 01:07:33 PKT 2022
-sdk.dir=C\:\\Users\\hajra\\AppData\\Local\\Android\\Sdk
-
-MAPS_API_KEY= = AIzaSyBkGavhDliL54XKryuX6tunLdu4RfSVGDc
+#Thu Sep 29 10:36:15 PKT 2022
+sdk.dir=C\:\\Users\\MuhammadRamzan\\AppData\\Local\\Android\\Sdk
+MAPS_API_KEY=\= AIzaSyBkGavhDliL54XKryuX6tunLdu4RfSVGDc
