--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,12 +72,19 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"
             />
-        <activity android:name=".view.activity.weather.WeatherDetailActivity"
+        <activity android:name="com.otl.gps.navigation.map.route.view.fragment.travelTools.weather.WeatherDetailActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
-        <activity android:name=".view.activity.weather.WeatherActivity"
+
+        <activity android:name="com.otl.gps.navigation.map.route.view.fragment.travelTools.weather.WeatherActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".view.fragment.places.PreviewSavedPlacesActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:screenOrientation="portrait"
