--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 31 10:48:42 PKT 2022
-sdk.dir=C\:\\Users\\MuhammadRamzan\\AppData\\Local\\Android\\Sdk
+#Tue Nov 01 00:22:25 PKT 2022
+sdk.dir=C\:\\Users\\hajra\\AppData\\Local\\Android\\Sdk
 MAPS_API_KEY=AIzaSyBkGavhDliL54XKryuX6tunLdu4RfSVGDc
