Notifications,Native ads,Premium screen Fixes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,13 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
+        <receiver
+            android:name=".receivers.NotificationReceiver"
+            android:enabled="true">
+
+        </receiver>
     </application>
 
 </manifest>
