--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ android {
             resValue 'string', 'gps_appopen_id', '"ca-app-pub-8804904864147916/6197398911"'
             resValue 'string', 'gps_banner_id', '"ca-app-pub-8804904864147916/8719620470"'
             resValue 'string', 'gps_square_banner_id', '"ca-app-pub-8804904864147916/6568637221"'
+            resValue 'string', 'gps_native_id', '"ca-app-pub-8804904864147916/6211888892"'
 
 
 
@@ -71,6 +72,8 @@ android {
             resValue 'string', 'gps_appopen_id', '"ca-app-pub-3940256099942544/3419835294"'
             resValue 'string', 'gps_banner_id', '"ca-app-pub-3940256099942544/6300978111"'
             resValue 'string', 'gps_square_banner_id', '"ca-app-pub-3940256099942544/6300978111"'
+            resValue 'string', 'gps_native_id', '"ca-app-pub-3940256099942544/2247696110"'
+
             ext.enableCrashlytics = false
             minifyEnabled true
             signingConfig signingConfigs.debug
