--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 12 21:54:13 PKT 2022
-sdk.dir=C\:\\Users\\hajra\\AppData\\Local\\Android\\Sdk
+#Tue Dec 20 09:50:22 PKT 2022
+sdk.dir=C\:\\Users\\MuhammadRamzan\\AppData\\Local\\Android\\Sdk
 MAPS_API_KEY=AIzaSyBkGavhDliL54XKryuX6tunLdu4RfSVGDc
