--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,13 @@ android {
 //                abiFilters "armeabi-v7a", "armeabi" // includes ARM SO files only, so no x86 SO file
 //            }
 //        liv
+
             resValue 'string', 'gps_app_id', '"ca-app-pub-8804904864147916~1192484244"'
-            resValue 'string', 'gps_inter_id', '"ca-app-pub-8804904864147916/6388970608"'
-            resValue 'string', 'gps_appopen_id', '"ca-app-pub-8804904864147916/6197398911"'
+            resValue 'string', 'gps_inter_id', '"ca-app-pub-8804904864147916/7157299707"'
+            resValue 'string', 'gps_appopen_id', '"ca-app-pub-8804904864147916/5952029247"'
             resValue 'string', 'gps_banner_id', '"ca-app-pub-8804904864147916/8719620470"'
-            resValue 'string', 'gps_square_banner_id', '"ca-app-pub-8804904864147916/6568637221"'
-            resValue 'string', 'gps_native_id', '"ca-app-pub-8804904864147916/6211888892"'
+            resValue 'string', 'gps_square_banner_id', '"ca-app-pub-8804904864147916/3377018552"'
+            resValue 'string', 'gps_native_id', '" ca-app-pub-8804904864147916/6143600936"'
 
 
 
@@ -209,7 +210,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.prongbang:inapp-update:1.0.1'
 
-//    implementation 'com.google.ads.mediation:facebook:6.11.0.1'
+    implementation 'com.google.ads.mediation:facebook:6.11.0.1'
 //    implementation 'com.unity3d.ads:unity-ads:4.4.1'
 //    implementation 'com.google.ads.mediation:unity:4.4.1.0'
 //
