--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.otl.gps.navigation.map.route"
         minSdk 23
         targetSdk 32
-        versionCode 10
-        versionName "2.0"
+        versionCode 12
+        versionName "2.12"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         setProperty("archivesBaseName", "GPS Maps Navigation & Traffic_${versionCode}_vn_${versionName}")
 
@@ -28,14 +28,14 @@ android {
     signingConfigs {
 
         debug {
-            storeFile file('D:\\GitSamples\\RawGPS\\rawgps.jks')
+            storeFile file('C:\\AndroidProjects\\RawGPS\\RawGPS\\rawgps.jks')
             storePassword 'rawgps1234'
             keyPassword 'rawgps1234'
             keyAlias 'rawgps'
         }
 
         release {
-            storeFile file('D:\\GitSamples\\RawGPS\\rawgps.jks')
+            storeFile file('C:\\AndroidProjects\\RawGPS\\RawGPS\\rawgps.jks')
             storePassword 'rawgps1234'
             keyPassword 'rawgps1234'
             keyAlias 'rawgps'
@@ -55,7 +55,7 @@ android {
             resValue 'string', 'gps_appopen_id', '"ca-app-pub-8804904864147916/5952029247"'
             resValue 'string', 'gps_banner_id', '"ca-app-pub-8804904864147916/8719620470"'
             resValue 'string', 'gps_square_banner_id', '"ca-app-pub-8804904864147916/3377018552"'
-            resValue 'string', 'gps_native_id', '" ca-app-pub-8804904864147916/6143600936"'
+            resValue 'string', 'gps_native_id', '"ca-app-pub-8804904864147916/5118281532"'
             shrinkResources true
             minifyEnabled true
             signingConfig signingConfigs.release
@@ -73,7 +73,8 @@ android {
             resValue 'string', 'gps_appopen_id', '"ca-app-pub-3940256099942544/3419835294"'
             resValue 'string', 'gps_banner_id', '"ca-app-pub-3940256099942544/6300978111"'
             resValue 'string', 'gps_square_banner_id', '"ca-app-pub-3940256099942544/6300978111"'
-            resValue 'string', 'gps_native_id', '"ca-app-pub-3940256099942544/2247696110"'
+            resValue 'string', 'gps_native_id', '"ca-app-pub-3940256099942544/2247696110"' //test
+
             shrinkResources true
             ext.enableCrashlytics = false
             minifyEnabled true
