--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 30 17:36:33 PKT 2022
-sdk.dir=C\:\\Users\\MuhammadRamzan\\AppData\\Local\\Android\\Sdk
+#Sun Jan 01 21:23:48 PKT 2023
+sdk.dir=C\:\\Users\\hajra\\AppData\\Local\\Android\\Sdk
 MAPS_API_KEY=AIzaSyBkGavhDliL54XKryuX6tunLdu4RfSVGDc
